--- a/config.h.in
+++ b/config.h.in
@@ -3,7 +3,7 @@
 
 #cmakedefine VERSION "@VERSION@"
 #cmakedefine WITH_BINLOG
-#cmakedefine WITH_MYSSL
+#cmakedefine WITH_SSL
 
 #if   defined(LIBMYSQL_VERSION)
 #define MYSQL_VERSION_STR LIBMYSQL_VERSION
